# freecode

./: .gitignore  AGENTS.md  Benchmark.md  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json  pi-tui.md  pnpm-lock.yaml  result.txt  results-10.json  vercel.json
.changeset/: brave-ears-chew.md
.claude/: settings.json
.freecode/sessions/session-1/: memory.json
.github/workflows/: release.yml
apps/cli/: package.json
apps/cli/src/: server.ts
apps/core/: CHANGELOG.md  package.json  tsconfig.json
apps/core/src/: cli.ts  logo.txt  models-dev.ts  (+3 more)
apps/tui/: CHANGELOG.md  README.md  build.config.mjs  package.json  tsconfig.json
apps/tui-electron/: package.json  tsconfig.json
apps/tui-rs/: Cargo.toml  README.md
apps/tui-rs/src/: app.rs  lib.rs  main.rs
apps/tui-rs/src/commands/: clear.rs  compact.rs  help.rs  mod.rs  mode.rs  model.rs  quit.rs  session.rs
apps/tui-rs/src/ipc/: client.rs  mod.rs  protocol.rs
apps/tui-rs/src/ui/: command.rs  intro.rs  markdown.rs  mod.rs  oscilloscope.rs  prompt.rs  session.rs  status.rs  tool.rs
apps/vscode/: package-lock.json  package.json  tsconfig.json
apps/web/: package.json  tailwind.config.ts
apps/web-app/: index.html  package.json  tailwind.config.js  vite.config.ts.timestamp-1784093434325-9a3fef1773096.mjs
docs/: agent-loop.md  hooks-system.md
graphify-out/: .graphify_cached.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: bench_memory.py  build-bun.mjs  build-sea.mjs  install.ps1  install.sh  uninstall.sh
(+503 files in other folders)
