[package]
name = "freecode-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "freecode-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tui-textarea = "0.7"
throbber-widgets-tui = "0.8"
pulldown-cmark = { version = "0.13.4", default-features = false }

[profile.release]
lto = true
strip = true
opt-level = 3
